feat: :zap: added simd to startup