@@ -1,4 +1,4 @@
 #!/bin/bash
 #
 # Start the purpur.jar server with max 2gb of ram
-java -Xmx2G -jar purpur.jar nogui
+/usr/bin/java --add-modules=jdk.incubator.vector -Xms1G -Xmx2G -jar paper.jar --nogui
